--- a/style.css
+++ b/style.css
@@ -2,13 +2,12 @@
 
 :root {
     --cor-de-fundo: #1E1E1E;
-    --verde: #881a1a;
+    --verde: #6e4646;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
-
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco);
